# hackathon-agenticai

./: .env.example  .env.shared  .gitignore  LICENSE  README.md  chainlit.md  pyproject.toml
agent_hackathon/: agent_models.py  agent_system_prompts.py  agent_tools.py  data_models.py  frontend.py  terminal_interface.py
agent_hackathon/utils/: config.py  database_service.py  debug_agent.py  embedder.py  settings.py  upload_data_to_azure_search.py
data/: database.json
