[project]
name = "agent_hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.34.0",
    "azure-search-documents>=11.5.2",
    "chainlit==2.1.0",
    "loguru>=0.7.3",
    "mlflow==2.21.3",
    "openai>=1.79.0",
    "openai-agents>=0.0.15",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"